adding flæskesteg recipe

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/burniglove.html">Burning Love</a></li>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/flæskesteg.html">Flæskesteg</a></li>
    </ul>
 </body>
 </html>
