--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
    <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/burniglove.html">Burning Love</a></li>
+        <li><a href="recipes/burninglove.html">Burning Love</a></li>
         <li><a href="recipes/flæskesteg.html">Flæskesteg</a></li>
    </ul>
 </body>
