--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../recipes/lasagna.jpeg" alt="lasagna recipe" height="auto" width="500" />
+    <img src="../img/lasagna.jpeg" alt="lasagna recipe" height="auto" width="500" />
     <h2>The best classic lasagna recipe</h2>
     <p>The perfect lasagna recipe made with parmesan ricotta cheese filling, melted mozzarella cheese,<br>
         lasagna noodles, and a robust tomato meat sauce. It is the best lasagna recipe!</p>
