Adding more info into te page

--- a/recipes/burninglove.html
+++ b/recipes/burninglove.html
@@ -6,6 +6,26 @@
     <title>Burning Love</title>
 </head>
 <body>
-    
+    <img src="../img/burninglove.webp" alt="Burning love Recipe" height="auto" width="500" />
+    <h2>Danish burning love (potato mash with lardons & onions)</h2>
+    <p>Burning Love Mashed Potatoes is an old Danish dish that uses simple ingredients: potatoes, milk, bacon, and onions, and transforms them into something amazing. These loaded mashed potatoes are a perfect main dish or decadent side.</p>
+        <ul>
+            <li>3 Borettane onions</li>
+            <li>3 tsbp rapeseed oil (or what ever you prefer)</li>
+            <li>20g butter</li>
+            <li>800g Potatoes, peeled and cut into chunks</li>
+            <li>50ml Milk </li>
+            <li>125g unsmoked lardons </li>
+            <li>1/2 tsbp parsley</li>
+     </ul>
+
+    <h2>Instructions</h2>
+        <ol>
+            <li>Deal with the onions first, so they’re ready to go on the mash, by halving and <br>finely slicing them. Heat the oil in a heavy-based pan and add the onions. Cook over <br>a medium heat (lower it as you need to), stirring occasionally, for 20 minutes until <br>the onions are pale gold and beginning to soften</li>
+            <li>Add a couple of large pinches of salt – this helps the onions sweat – 5g of the <br>butter and 3 tbsp water, then turn the heat right down. Cover and sweat the onions <br>for 30 minutes, checking occasionally to make sure there is enough moisture and the <br>onions aren’t burning on the bottom. When the onions are soft, remove the lid, turn <br>the heat right up and cook until all the moisture has evaporated.</li>
+            <li>Boil the potatoes until tender, then drain. Put them back in the saucepan, <br>crumple a clean tea towel on top of them and cover with a lid. Set on a very low <br>heat for 3-4 minutes to dry out – this makes better mash (don’t burn the potatoes, <br>though).</li>
+            <li>Mash the potatoes with the hot milk, the remaining butter and seasoning. Taste. <br>Cover to keep warm.</li>
+            <li>Put the bacon lardons into a hot pan and cook briskly in the fat which runs out <br>of them as they heat, until the lardons are golden all over and cooked through. <br>Toss in the parsley. Quickly reheat the onions. Put the mash into a warm bowl. <br>Scatter the onions on top, then the lardons. Serve immediately.</li>
+        </ol>
 </body>
 </html>
