adding more info into the page

--- a/recipes/burninglove.html
+++ b/recipes/burninglove.html
@@ -8,7 +8,7 @@
 <body>
     <img src="../img/burninglove.webp" alt="Burning love Recipe" height="auto" width="500" />
     <h2>Danish burning love (potato mash with lardons & onions)</h2>
-    <p>Burning Love Mashed Potatoes is an old Danish dish that uses simple ingredients: potatoes, milk, bacon, and onions, and transforms them into something amazing. These loaded mashed potatoes are a perfect main dish or decadent side.</p>
+    <p>Burning Love Mashed Potatoes is an old Danish dish that uses simple ingredients: potatoes,<br> milk, bacon, and onions, and transforms them into something amazing. These loaded <br>mashed potatoes are a perfect main dish or decadent side.</p>
         <ul>
             <li>3 Borettane onions</li>
             <li>3 tsbp rapeseed oil (or what ever you prefer)</li>
